Capítulo 2 - Estruturas de Decisão/Exercícios/.metadata/.plugins/org.eclipse.cdt.ui/hello_world.build.log
13:39:38 **** Incremental Build of configuration Debug for project hello_world ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\hello_world.o" "..\\src\\hello_world.c" 
..\src\hello_world.c:13:9: error: #include expects "FILENAME" or <FILENAME>
 #include
         ^
..\src\hello_world.c:15:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'int'
 int teste;
 ^

13:39:38 Build Failed. 2 errors, 0 warnings. (took 201ms)

